# interview_spb

./: CMakeLists.txt  Main.qml  PageCommands.qml  PageCommandsAdd.qml  README.md  Style.qml  main.cpp  modelsaverloader.cpp  modelsaverloader.h  translation.cpp  translation.h
.github/workflows/: cmake-multi-platform.yml
i18n/: en_US.ts  ru_RU.ts
